// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should CitiesOffers render correctly with popular sort and without authorization 1`] = `
<section
  className="cities__places places"
>
  <h2
    className="visually-hidden"
  >
    Places
  </h2>
  <b
    className="places__found"
  >
    1
     places to stay in 
    Paris
  </b>
  <form
    action="#"
    className="places__sorting"
    method="get"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <span
      className="places__sorting-caption"
    >
      Sort by 
    </span>
    <span
      className="places__sorting-type"
      tabIndex="0"
    >
      Popular
      <svg
        className="places__sorting-arrow"
        height="4"
        width="7"
      >
        <use
          xlinkHref="#icon-arrow-select"
        />
      </svg>
    </span>
    <ul
      className="places__options places__options--custom places__options--closed"
    >
      <li
        className="places__option places__option--active"
        onMouseDown={[Function]}
        tabIndex="0"
      >
        Popular
      </li>
      <li
        className="places__option "
        onMouseDown={[Function]}
        tabIndex="0"
      >
        Price: low to high
      </li>
      <li
        className="places__option "
        onMouseDown={[Function]}
        tabIndex="0"
      >
        Price: high to low
      </li>
      <li
        className="places__option "
        onMouseDown={[Function]}
        tabIndex="0"
      >
        Top rated first
      </li>
    </ul>
    <select
      className="places__sorting-type visually-hidden"
      defaultValue="popular"
      id="places-sorting"
    >
      <option
        className="places__option"
        value="popular"
      >
        Popular
      </option>
      <option
        className="places__option"
        value="to-low"
      >
        Price: low to high
      </option>
      <option
        className="places__option"
        value="to-high"
      >
        Price: high to low
      </option>
      <option
        className="places__option"
        value="top-rated"
      >
        Top rated first
      </option>
    </select>
  </form>
  <div
    className="cities__places-list places__list tabs__content"
  >
    <article
      className="cities__place-card place-card"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      
      <div
        className="cities__image-wrapper place-card__image-wrapper"
      >
        <a
          href="/offer/1"
          onClick={[Function]}
        >
          <img
            alt="Place image"
            className="place-card__image"
            height={200}
            src="https://assets.htmlacademy.ru/intensives/javascript-3/hotel/14.jpg"
            width={260}
          />
        </a>
      </div>
      <div
        className=" place-card__info"
      >
        <div
          className="place-card__price-wrapper"
        >
          <div
            className="place-card__price"
          >
            <b
              className="place-card__price-value"
            >
              €
              493
            </b>
            <span
              className="place-card__price-text"
            >
              / night
            </span>
          </div>
          <button
            className=" place-card__bookmark-button button"
            onClick={[Function]}
            type="button"
          >
            <svg
              className="place-card__bookmark-icon"
              height={19}
              width={18}
            >
              <use
                xlinkHref="#icon-bookmark"
              />
            </svg>
            <span
              className="visually-hidden"
            >
              To bookmarks
            </span>
          </button>
        </div>
        <div
          className="place-card__rating rating"
        >
          <div
            className="place-card__stars rating__stars"
          >
            <span
              style={
                Object {
                  "width": "80%",
                }
              }
            >
              3.8
            </span>
            <span
              className="visually-hidden"
            >
              Rating
            </span>
          </div>
        </div>
        <h2
          className="place-card__name"
        >
          <a
            href="/offer/1"
            onClick={[Function]}
          >
            The house among olive
          </a>
        </h2>
        <p
          className="place-card__type"
        >
          house
        </p>
      </div>
    </article>
  </div>
</section>
`;

exports[`Should CitiesOffers render correctly with to-low sort and with authorization 1`] = `
<section
  className="cities__places places"
>
  <h2
    className="visually-hidden"
  >
    Places
  </h2>
  <b
    className="places__found"
  >
    1
     places to stay in 
    Cologne
  </b>
  <form
    action="#"
    className="places__sorting"
    method="get"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <span
      className="places__sorting-caption"
    >
      Sort by 
    </span>
    <span
      className="places__sorting-type"
      tabIndex="0"
    >
      Price: low to high
      <svg
        className="places__sorting-arrow"
        height="4"
        width="7"
      >
        <use
          xlinkHref="#icon-arrow-select"
        />
      </svg>
    </span>
    <ul
      className="places__options places__options--custom places__options--closed"
    >
      <li
        className="places__option "
        onMouseDown={[Function]}
        tabIndex="0"
      >
        Popular
      </li>
      <li
        className="places__option places__option--active"
        onMouseDown={[Function]}
        tabIndex="0"
      >
        Price: low to high
      </li>
      <li
        className="places__option "
        onMouseDown={[Function]}
        tabIndex="0"
      >
        Price: high to low
      </li>
      <li
        className="places__option "
        onMouseDown={[Function]}
        tabIndex="0"
      >
        Top rated first
      </li>
    </ul>
    <select
      className="places__sorting-type visually-hidden"
      defaultValue="to-low"
      id="places-sorting"
    >
      <option
        className="places__option"
        value="popular"
      >
        Popular
      </option>
      <option
        className="places__option"
        value="to-low"
      >
        Price: low to high
      </option>
      <option
        className="places__option"
        value="to-high"
      >
        Price: high to low
      </option>
      <option
        className="places__option"
        value="top-rated"
      >
        Top rated first
      </option>
    </select>
  </form>
  <div
    className="cities__places-list places__list tabs__content"
  >
    <article
      className="cities__place-card place-card"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      
      <div
        className="cities__image-wrapper place-card__image-wrapper"
      >
        <a
          href="/offer/1"
          onClick={[Function]}
        >
          <img
            alt="Place image"
            className="place-card__image"
            height={200}
            src="https://assets.htmlacademy.ru/intensives/javascript-3/hotel/14.jpg"
            width={260}
          />
        </a>
      </div>
      <div
        className=" place-card__info"
      >
        <div
          className="place-card__price-wrapper"
        >
          <div
            className="place-card__price"
          >
            <b
              className="place-card__price-value"
            >
              €
              493
            </b>
            <span
              className="place-card__price-text"
            >
              / night
            </span>
          </div>
          <button
            className=" place-card__bookmark-button button"
            onClick={[Function]}
            type="button"
          >
            <svg
              className="place-card__bookmark-icon"
              height={19}
              width={18}
            >
              <use
                xlinkHref="#icon-bookmark"
              />
            </svg>
            <span
              className="visually-hidden"
            >
              To bookmarks
            </span>
          </button>
        </div>
        <div
          className="place-card__rating rating"
        >
          <div
            className="place-card__stars rating__stars"
          >
            <span
              style={
                Object {
                  "width": "80%",
                }
              }
            >
              3.8
            </span>
            <span
              className="visually-hidden"
            >
              Rating
            </span>
          </div>
        </div>
        <h2
          className="place-card__name"
        >
          <a
            href="/offer/1"
            onClick={[Function]}
          >
            The house among olive
          </a>
        </h2>
        <p
          className="place-card__type"
        >
          house
        </p>
      </div>
    </article>
  </div>
</section>
`;
